<?xml version="1.0"?>
<package>
  <name>arduino</name>
  <version>0.0.0</version>
  <description>Package for the Arduino node.</description>
  
  <maintainer email="dave.barnett@ts.catapult.org.uk">Dave Barnett</maintainer>
  <maintainer email="servando.germanserrano@ts.catapult.org.uk">Servando German</maintainer>
  <maintainer email="ujjar.bhandari@ts.catapult.org.uk">Ujjar Bhandari</maintainer>
  
  <license>TSC Internal and Agreed Use Only</license>
  <url type="website">http://ts.catapult.org.uk</url>
  
  <author email="dave.barnett@ts.catapult.org.uk">Dave Barnett</author>
  <author email="servando.germanserrano@ts.catapult.org.uk">Servando German</author>
  <author email="ujjar.bhandari@ts.catapult.org.uk">Ujjar Bhandari</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  
  <export>
  </export>
</package>
