<?xml version="1.0"?>
<package>
  <name>demand_limiter</name>
  <version>0.0.0</version>
  <description>Package for Demand Limiter safety system.</description>
  
  <maintainer email="dave.barnett@ts.catapult.org.uk">Dave Barnett</maintainer>
  <maintainer email="servando.germanserrano@ts.catapult.org.uk">Servando German</maintainer>
  <maintainer email="ujjar.bhandari@ts.catapult.org.uk">Ujjar Bhandari</maintainer>
  
  <license>TSC Internal and Agreed Use Only</license>
  <url type="website">http://ts.catapult.org.uk</url>
  
  <author email="dave.barnett@ts.catapult.org.uk">Dave Barnett</author>
  <author email="servando.germanserrano@ts.catapult.org.uk">Servando German</author>
  <author email="ujjar.bhandari@ts.catapult.org.uk">Ujjar Bhandari</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dead_mans_handle</build_depend>
  <build_depend>pod</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pod</run_depend>

  <export>
  </export>
</package>
